# EyeCare

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: native-release.yml  release.yml
docs/: requirements.md
native/: Cargo.toml  build.rs
native/src/: main.rs  platform.rs  settings.rs  stats.rs  timer.rs  tray.rs  updater.rs
native/ui/: app.slint  theme.slint
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
