[package]
name = "eyecare-native"
version = "0.1.0"
edition = "2021"
description = "EyeCare native-GUI proof-of-concept (Slint) — RAM comparison vs the Tauri build"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
