[package]
name = "eyecare-native"
version = "0.1.0"
edition = "2021"
description = "EyeCare — native (Rust + Slint) re-implementation"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify-rust = "4"
i-slint-backend-winit = "1.8"
user-idle = "0.6"

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
