[package]
name = "eyecare-native"
version = "0.1.0"
edition = "2021"
description = "EyeCare — native (Rust + Slint) re-implementation"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "compat-1-2",
    "backend-winit",
    "renderer-femtovg",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
auto-launch = "0.5"
rfd = "0.15"
ureq = { version = "2", features = ["tls", "json"] }
notify-rust = "4"
i-slint-backend-winit = "1.8"
user-idle = "0.6"
global-hotkey = "0.6"

# Linux tray via StatusNotifierItem (D-Bus) — no gtk, keeps RAM low.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"
png = "0.17"
# read X11 window state for presentation/fullscreen suppression (§9.9)
x11rb = "0.13"
# get the X11 window id from winit (skip-taskbar)
raw-window-handle = "0.6"

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
