[package]
name = "eyecare"
version = "0.1.2"
description = "EyeCare — cross-platform eye-health & break reminder"
authors = ["Md. Abdullah Al Maruf"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/frankmaruf/EyeCare"
homepage = "https://github.com/frankmaruf/EyeCare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eyecare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
user-idle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
zbus = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
